# Enc-IoT

./: .gitignore  CMakeLists.txt  LICENSE.txt  gen.bat
python/: main.py
src/: CMakeLists.txt  main.cpp  timer.hpp
utils/: CMakeLists.txt  generate_file.cpp
